--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-safe-area-context": "^3.4.1",
+    "react-native-screens": "^3.12.0",
     "react-redux": "^7.2.6",
     "redux-saga": "^1.1.3"
   },
