--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.12.0",
+    "react-native-status-bar-height": "^2.6.0",
     "react-redux": "^7.2.6",
     "redux-saga": "^1.1.3"
   },
