--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.12.0",
     "react-native-status-bar-height": "^2.6.0",
