--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-screens": "^3.12.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-redux": "^7.2.6",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
