--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "^3.4.1",
     "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "^3.12.0",
+    "react-native-sensitive-info": "^6.0.0-alpha.9",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-toast-message": "^2.1.2",
     "react-redux": "^7.2.6",
