--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.2.2",
     "@react-native-async-storage/async-storage": "^1.16.3",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
@@ -19,8 +20,10 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-fast-image": "^8.5.11",
+    "react-native-gesture-handler": "^2.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "^3.12.0",
