--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-gesture-handler": "^2.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-scalable-image": "^1.1.0",
